resized images fixed overflow

--- a/styles/Story.module.css
+++ b/styles/Story.module.css
@@ -69,7 +69,7 @@
       display: grid;
       grid-template-columns: repeat(2, minmax(50%, auto));
       width: var(--max-width);
-      max-width: 50%;
+      max-width: 90%;
     }
     
     .desc {
@@ -81,6 +81,7 @@
       background: rgba(var(--card-rgb), 0);
       border: 1px solid rgba(var(--card-border-rgb), 0);
       transition: background 200ms, border 200ms;
+      width: fit-content;
     }
     
     .card span {
